[tool.poetry]
name = "fava-fe-build"
version = "0.1.0"
description = ""
authors = ["johannesjh <johannesjh@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fava = { git = "https://github.com/beancount/fava.git" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
